--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,16 @@ body {
     padding: 0 20px;
 }
 
+.container-categories {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    padding: 0 20px;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -212,12 +222,6 @@ a {
     font-family: var(--font-secondary);
 }
 
-.show-more {
-    text-align: center;
-    margin: 30px 0;
-    padding-bottom: 20px;
-}
-
 .btn-show-more {
     background: none;
     border: 1px solid var(--tan-medium);
@@ -308,6 +312,17 @@ a {
     font-family: var(--font-secondary);
 }
 
+.filters-category {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;
+    padding-top: 0px;
+    margin-top: -10px;
+    font-family: var(--font-secondary);
+    margin-bottom: 10px;
+}
+
 .filter-item select {
     padding: 8px 15px;
     border: 1px solid var(--tan-medium);
@@ -325,6 +340,38 @@ a {
     border-top: 1px solid var(--tan-medium);
 }
 
+.posters {
+    margin-top: 10px;
+    padding-top: 30px;
+    border-top: 1px solid var(--tan-medium);
+}
+
+.posters1 {
+    margin-top: 10px;
+    padding-top: 30px;
+}
+
+.posters2 {
+    margin-top: 10px;
+    padding-top: 30px;
+}
+
+.posters3 {
+    margin-top: 10px;
+    padding-top: 30px;
+}
+
+.posters4 {
+    margin-top: 10px;
+    padding-top: 30px;
+}
+
+.posters5 {
+    margin-top: 10px;
+    padding-top: 30px;
+}
+
+
 .featured-products h3 {
     font-size: 1.8rem;
     color: var(--brown-dark);
@@ -338,6 +385,7 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 25px;
 }
+
 
 .product-card {
     background: var(--cream-medium);
@@ -372,7 +420,7 @@ a {
 
 .product-card img {
     width: 100%;
-    height: 250px;
+    height: 300px;
     object-fit: cover;
     border-bottom: 1px solid var(--tan-medium);
 }
@@ -409,6 +457,19 @@ a {
 
 .stars {
     color: var(--brown-medium);
+    display: flex;
+    gap: 4px;
+    cursor: pointer;
+}
+
+.stars i {
+    font-size: 1.5rem;
+    color: var(--tan-medium); /* default color */
+    transition: color 0.3s ease;
+}
+
+.stars i.filled {
+    color: var(--brown-dark); /* filled color */
 }
 
 .rating-count {
@@ -442,6 +503,9 @@ a {
 .add-to-cart {
     width: 100%;
     padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--brown-medium);
     color: var(--cream-light);
     border: none;
@@ -726,7 +790,6 @@ a {
     }
 }
 
-}
 
 @media (max-width: 480px) {
     .user-actions {
@@ -770,7 +833,10 @@ a {
 }
 
 .product-main-image {
-    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 47%;
     border-radius: 8px;
     border: 1px solid var(--tan-medium);
 }
@@ -894,6 +960,7 @@ a {
     background-position: right 12px center;
     background-size: 12px;
     padding-right: 32px;
+    width: 105%;
 }
 
 .sort-select:focus {
