--- a/css/styles.css
+++ b/css/styles.css
@@ -963,6 +963,21 @@ a {
     width: 105%;
 }
 
+.image-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.image-wrapper img {
+  display: block;
+}
+.image-wrapper .overlay {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: transparent;
+  z-index: 2;
+}
+
 .sort-select:focus {
     outline: none;
     border-color: var(--brown-medium);
